--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "element-ui": "^1.3.3",
+    "mint-ui": "^2.2.7",
     "vue": "^2.2.6",
     "vue-router": "^2.3.1"
   },
