--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .DS_Store
-node_modules/
+node_modules/*
 dist/
 npm-debug.log*
 yarn-debug.log*
@@ -7,3 +7,5 @@ yarn-error.log*
 test/unit/coverage
 test/e2e/reports
 selenium-debug.log
+.vscode/*
+.idea/*
