--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "better-scroll": "^1.8.4",
     "mint-ui": "^2.2.13",
     "normalize.css": "^8.0.0",
     "vue": "^2.5.16",
